--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,16 @@
 header {
   width: 95%;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 20px auto;
 }
 
 .logo {
-  width: 60%;
+  width: 100px;
+}
+
+.header-content {
+  display: inline;
+  font-size: 60px;
+  font-weight: bold;
 }
 
 .sprint-status {
