fix: Show complexity points in indicators
Changed property name accessed to match the new one in json file.

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,10 @@ header {
   height: 80px;
 }
 
+.progress-bar {
+  color: black;
+}
+
 .progressBarBig {
   padding-top: 25px;
   font-size: 25px;
