--- a/css/styles.css
+++ b/css/styles.css
@@ -64,3 +64,19 @@ header {
   font-size: 20px;
   font-weight: bold;
 }
+
+.idealProgress {
+  background-color: green;
+}
+
+.okProgress {
+  background-color: blue;
+}
+
+.badProgress {
+  background-color: yellow;
+}
+
+.dangerProgress {
+  background-color: red;
+}
