--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,36 @@
+.logo {
+  width: 100px;
+}
+
 header {
   width: 95%;
   margin: 20px auto;
-}
-
-.logo {
-  width: 100px;
 }
 
 .header-content {
   display: inline;
   font-size: 60px;
   font-weight: bold;
+}
+
+.days-left {
+  text-align: center;
+  font-size: 30px;
+}
+
+.progress-big {
+  height: 80px;
+}
+
+.progress-bar {
+  color: black;
+}
+
+.progressBarBig {
+  padding-top: 25px;
+  font-size: 25px;
+  color: black;
+  padding-left: 10px;
 }
 
 .sprint-status {
@@ -32,26 +52,6 @@ header {
 
 .failed {
   background-image: url("../img/fork-lightning.jpg");
-}
-
-.progress-big {
-  height: 80px;
-}
-
-.progress-bar {
-  color: black;
-}
-
-.progressBarBig {
-  padding-top: 25px;
-  font-size: 25px;
-  color: black;
-  padding-left: 10px;
-}
-
-.days-left {
-  text-align: center;
-  font-size: 30px;
 }
 
 .health-top {
@@ -80,3 +80,106 @@ header {
 .dangerProgress {
   background-color: red;
 }
+
+.panel {
+  margin: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*https://davidwalsh.name/css-flip*/
+/*https://codepen.io/darkwing/pen/bCali*/
+.flip-container {
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -o-perspective: 1000;
+  perspective: 1000;
+}
+
+.flip-container:hover .flipper,
+.flip-container.hover .flipper {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+.flip-container, .front, .back {
+  width: 100%;
+  height: 400px; /*TODO: ? */
+}
+
+.flipper {
+  -webkit-transition: 0.6s;
+  -webkit-transform-style: preserve-3d;
+
+  -moz-transition: 0.6s;
+  -moz-transform-style: preserve-3d;
+
+  -o-transition: 0.6s;
+  -o-transform-style: preserve-3d;
+
+  transition: 0.6s;
+  transform-style: preserve-3d;
+
+  position: relative;
+}
+
+.front, .back {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
+
+  /*position: absolute;*/
+  top: 0;
+  left: 0;
+}
+
+.front {
+  /*background: url(http://davidwalsh.name/demo/dwflip.jpg) 0 0 no-repeat;*/
+  z-index: 2;
+}
+
+.back {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+
+  /*background: #f8f8f8;*/
+  position: absolute;
+
+}
+
+
+/*.front .panel {*/
+  /*display: inline-block;*/
+  /*padding: 5px 10px;*/
+  /*bottom: 60px;*/
+  /*left: 25%;*/
+  /*position: absolute;*/
+/*}*/
+
+
+
+
+
+
+
+
+
+
+
+
