--- a/css/styles.css
+++ b/css/styles.css
@@ -86,20 +86,9 @@ header {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-/*https://davidwalsh.name/css-flip*/
-/*https://codepen.io/darkwing/pen/bCali*/
+/* Flipping through CSS adapted from:
+    https://davidwalsh.name/css-flip
+    https://codepen.io/darkwing/pen/bCali*/
 .flip-container {
   -webkit-perspective: 1000;
   -moz-perspective: 1000;
@@ -107,8 +96,7 @@ header {
   perspective: 1000;
 }
 
-.flip-container:hover .flipper,
-.flip-container.hover .flipper {
+.flipping .flipper {
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
   -o-transform: rotateY(180deg);
@@ -117,22 +105,18 @@ header {
 
 .flip-container, .front, .back {
   width: 100%;
-  height: 400px; /*TODO: ? */
+  height: 300px; /*TODO: ? */
 }
 
 .flipper {
-  -webkit-transition: 0.6s;
+  -webkit-transition: 2.0s;
   -webkit-transform-style: preserve-3d;
-
-  -moz-transition: 0.6s;
+  -moz-transition: 2.0s;
   -moz-transform-style: preserve-3d;
-
-  -o-transition: 0.6s;
+  -o-transition: 2.0s;
   -o-transform-style: preserve-3d;
-
-  transition: 0.6s;
+  transition: 2.0s;
   transform-style: preserve-3d;
-
   position: relative;
 }
 
@@ -141,14 +125,11 @@ header {
   -moz-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
-
-  /*position: absolute;*/
   top: 0;
   left: 0;
 }
 
 .front {
-  /*background: url(http://davidwalsh.name/demo/dwflip.jpg) 0 0 no-repeat;*/
   z-index: 2;
 }
 
@@ -157,29 +138,7 @@ header {
   -moz-transform: rotateY(180deg);
   -o-transform: rotateY(180deg);
   transform: rotateY(180deg);
-
-  /*background: #f8f8f8;*/
   position: absolute;
-
 }
-
-
-/*.front .panel {*/
-  /*display: inline-block;*/
-  /*padding: 5px 10px;*/
-  /*bottom: 60px;*/
-  /*left: 25%;*/
-  /*position: absolute;*/
-/*}*/
-
-
-
-
-
-
-
-
-
-
 
 
