refactor: Change Release Board to Analysis

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,4 +141,18 @@ header {
   position: absolute;
 }
 
+.analysis-content {
+  text-align: center;
+}
 
+.analysis-glyphicon {
+  font-size: 4em;
+}
+
+.okColor {
+  color: #2e8b57;
+}
+
+.dangerColor {
+  color: #ac2925;
+}
