refactor: Integrate Analysis in HTML to KO
Add data-bind properties to elements in Analysis panel (in HTML)
to update as the Analysis object does (in app.js).

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,14 +54,9 @@ header {
   background-image: url("../img/fork-lightning.jpg");
 }
 
-.health-top {
+.health-number {
   font-size: 30px;
   color: green;
-  font-weight: bold;
-}
-
-.health-bottom {
-  font-size: 20px;
   font-weight: bold;
 }
 
