--- a/css/styles.css
+++ b/css/styles.css
@@ -22,15 +22,13 @@ header {
   height: 80px;
 }
 
-.progress-bar {
-  color: black;
-}
 
 .progressBarBig {
   padding-top: 25px;
   font-size: 25px;
   color: black;
   padding-left: 10px;
+  /*background-color: #0099CC;*/
 }
 
 .sprint-status {
