style: Change table-condensed padding
In Bootstrap's CSS file.

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,11 @@ header {
   padding: 0;
 }
 
+
+table td {
+    padding: 0.1em;
+}
+
 .metric {
     /*font-size: 1.5em;*/
     font-weight: bold;
