--- a/css/styles.css
+++ b/css/styles.css
@@ -20,11 +20,10 @@ header {
 
 .days-left {
   text-align: center;
-  /*font-size: 30px;*/
 }
 
 .progress-big {
-  height: 80px;
+    height: 80px;
 }
 
 .table {
@@ -34,10 +33,9 @@ header {
 
 .progressBarBig {
   padding-top: 25px;
-  /*font-size: 25px;*/
   color: black;
   padding-left: 10px;
-  /*background-color: #0099CC;*/
+  font-size: 1.1em;
 }
 
 .sprint-status {
@@ -65,6 +63,7 @@ header {
 .panel {
   margin: 10px;
   padding: 0;
+  height: 18.5em; /* at least flip panel must have a fixed heigh*/
 }
 
 
@@ -129,7 +128,7 @@ table td {
 
 .flip-container, .front, .back {
   width: 100%;
-  height: 300px; /*TODO: ? */
+  /*height: 13em;*/
 }
 
 .flipper {
