--- a/css/styles.css
+++ b/css/styles.css
@@ -216,3 +216,16 @@ table td {
     border-top-right-radius: 3px;
 }
 
+/* styles for boards when 'DOING IDEAL' */
+.boardSuccess {
+    background-color: #d6e9c6;
+    border: 3px solid #3c763d;
+}
+
+.boardHeaderSuccess {
+    background-color: #dff0d8;
+    padding: 10px 15px;
+    border-bottom: 1px solid #3c763d;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
