--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ header {
   display: inline;
   font-size: 60px;
   font-weight: bold;
+    text-shadow: 0px 1px 5px rgba(255, 255, 255, 1);
 }
 
 
