--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,13 @@ header {
     text-shadow: 0px 1px 5px rgba(255, 255, 255, 1);
 }
 
+.panel-heading-icon {
+    position: absolute;
+    right: 25px;
+    top: 25px;
+    font-size: 2em;
+}
+
 
 .days-left {
   text-align: center;
