--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,14 @@ table td {
     text-shadow: 2px -1px 6px rgba(89, 58, 0, 1);
 }
 
+dl {
+    margin: 30px 50px 50px;
+}
+
+dt {
+    margin-bottom: 8px;
+}
+
 /* Flipping through CSS adapted from:
     https://davidwalsh.name/css-flip
     https://codepen.io/darkwing/pen/bCali*/
