refactor: Change functions that update body's background image
Instead of using sprint progress, now the app calls viewModel's functions
that take into account status in the 3 boards.

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,11 @@ dt {
     margin-bottom: 8px;
 }
 
+.team-panel {
+     text-align: center;
+    margin: 20px;
+}
+
 /* Flipping through CSS adapted from:
     https://davidwalsh.name/css-flip
     https://codepen.io/darkwing/pen/bCali*/
@@ -240,7 +245,7 @@ dt {
 }
 
 /* Set up background as per general status */
-.sprint-status {
+.general-status {
     background-repeat: no-repeat;
     background-size: cover;
 }
